--- a/lab/index.html
+++ b/lab/index.html
@@ -34,6 +34,7 @@
             'wholeness.hyperlinker.org': 'https://hyperlinker.org/wholeness/index.htm',
             'dpr-380.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
             'rut.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/art_cul.html',
+            'al-presidente.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pres/pres.pdf',
         };
 
         if (redirectMap[hostname]) {
