--- a/lab/repita/camps/immo/cultura.html
+++ b/lab/repita/camps/immo/cultura.html
@@ -13,7 +13,7 @@
 
 <br>
 
-<center><table width="77%" cellpadding="48pt"><tr><td align="center">
+<center><table width="70%" cellpadding="48pt"><tr><td align="center">
 
 <a class="none" href="prefa.html">
 <b><i>
@@ -26,11 +26,11 @@
 
 <div style="font-size: 28px;">
 
-Mentre i vecchi sistemi di potere continuano a fare il peggio che vogliono, circondandosi di individui fidelizzati con assunzioni a vita in una centralità che così è rimasta di stampo tiranno, mentre codesti prepotenti, sbarrando il passo ai cittadini, continuano a mantenere in auge vecchie corbellerie e produrne di nuove, persone speciali, che non evitano il flusso naturalmente mutevole della vita ma anzi vi navigano dentro divenendone parte, affrontano il vecchio per plasmare il nuovo.
+Mentre i vecchi sistemi di potere continuano a fare il torto che vogliono (potendolo fare per via degli acritici individui dei quali si circondano, fidelizzati con assunzioni a vita in una centralità che così è rimasta tiranna, come ce la lasciarono il duce ed il re), persone speciali, invece di poggiarsi anch'esse sul vecchio, lo evitano e plasmano ogni giorno il nuovo.
 
 <br><br>
 
-Ecco, a titolo di esempio, un'azione politica (tesa ad eliminare una ingiustizia che dura da decenni) trasformarsi in azione culturale e, compiendosi questa all'interno di una prolungata attività di ricerca svolta con gran cura, amore e passione, prodursi delle vere e proprie opere d'arte.
+A titolo di esempio, ecco un'azione politica (tesa ad eliminare una insanità normativa che dura da decenni) trasformarsi in azione culturale e, compiendosi questa all'interno di una prolungata attività di ricerca svolta con gran cura, amore e passione, prodursi in delle vere e proprie opere d'arte. Da ammirare e godere come ogni altro capolavoro.
 
 </div>
 
