--- a/lab/repita/camps/immo/cultura.html
+++ b/lab/repita/camps/immo/cultura.html
@@ -26,7 +26,7 @@
 
 <div style="font-size: 28px;">
 
-Mentre i vecchi sistemi di potere continuano a fare il torto che vogliono (potendolo fare per via degli acritici individui dei quali si circondano, fidelizzati con assunzioni a vita in una centralità che così è rimasta tiranna, come ce la lasciarono il duce ed il re), persone speciali, invece di poggiarsi anch'esse sul vecchio, lo evitano e plasmano ogni giorno il nuovo.
+Mentre i vecchi sistemi di potere continuano a fare il torto che vogliono (potendolo fare per via degli acritici individui dei quali si circondano, fidelizzati con assunzioni a vita in una centralità che così è rimasta tiranna, come ce la lasciarono il duce ed il re), persone speciali, invece di poggiarsi anch'esse sul vecchio, lo evitano. E plasmano ogni giorno il nuovo.
 
 <br><br>
 
