new pres html version

--- a/lab/corpus/dpr_380.html
+++ b/lab/corpus/dpr_380.html
@@ -63,13 +63,17 @@ Titolo della Collezione:
 
 <br><br>
 
-Opera immessa su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. 
-
-Somma richiesta: 9.000.000 (nove milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è presente nel frontespizio della Collezione.
+Opera immessa su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è presente nel frontespizio della Collezione, per il caso di cessione di proprietà.
 
 <br><br>
 
+ <!--
+
+Somma richiesta: 9.000.000 (nove milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
+
 In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
+
+-->
 
 </span>
 
