--- a/lab/corpus/prefaz.html
+++ b/lab/corpus/prefaz.html
@@ -46,7 +46,7 @@
 
 <div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
 
-L'Opera d'Arte trascende la mera forma. Non è solo scultura, pittura o immagine, sia essa materiale che digitale. L'Arte risiede non solo nel supporto, ma soprattutto nel Contenuto Ideativo, nel Pensiero e Progetto che esso veicola. Ecco perché il Corpus di scritti qui esposto si afferma come autentica Opera d'Arte intellettuale. Ed oggi qui, grazie alla tecnologia blockchain in grado di certificarla rendendola bene digitale, oltre alla pura esposizione, se ne permette anche la vendita e la cessione.
+L'Opera d'Arte trascende la mera forma. Non è solo scultura, pittura o immagine, sia essa materiale che digitale. L'Arte risiede non solo nel supporto, ma soprattutto nel Contenuto Ideativo, nel Pensiero e Progetto che esso veicola. Ecco perché il Corpus di scritti qui esposto si afferma come autentica Opera d'Arte intellettuale. Ed oggi qui, grazie alla tecnologia blockchain in grado di certificarla rendendola bene digitale, oltre alla pura esposizione, se ne permette anche la cessione ed il trasferimento.
 
 </div>
 
