--- a/lab/index.html
+++ b/lab/index.html
@@ -35,6 +35,7 @@
             'dpr-380.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
             'rut.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/art_cul.html',
             'al-presidente.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pre/1.pdf',
+            'alla-presidenza.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
         };
 
         if (redirectMap[hostname]) {
