--- a/lab/corpus/rut_56.html
+++ b/lab/corpus/rut_56.html
@@ -49,7 +49,7 @@
 
 <span style="font-size: 22px;">
 
-Collezione di Lettere inviate agli Euro Parlamentari, italiani e non dal 20/09 al 30/09 dell’anno 56 della Nuova Era Terrestre per rivelare il più grande inganno della Storia.
+Collezione di Lettere inviate agli Euro Parlamentari, italiani e non dal 20/09 al 30/09 dell’anno 56 della Nuova Era Terrestre per rivelare il più grande inganno della Storia, con citazione dell'iniquo D.P.R. 380/2001.
 
 <br><br>
 
