--- a/lab/corpus/rut_56.html
+++ b/lab/corpus/rut_56.html
@@ -81,7 +81,7 @@ In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega
 
 <div style="font-size: 69px; text-align: center; max-width: 700px; padding: 20px;">
 
-<a class="nonenone" href="index.html">&#9660;</a>
+<a class="nonenone" href="goes_on.html">&#9660;</a>
 
 </div>
 
