da kimi suggerimenti

--- a/lab/repita/camps/immo/pdr.html
+++ b/lab/repita/camps/immo/pdr.html
@@ -26,7 +26,7 @@
 
 <div style="text-align: left; font-size: 48px;"><b>
 
-D.P.R. 380/2001: l'iniquità lede<br>l'immagine del Presidente della Repubblica
+D.P.R. 380/2001: l'iniquità appare ledere<br>l'immagine del Presidente della Repubblica
 
 </b></div>
 
@@ -59,7 +59,7 @@ Da oltre quarant'anni il Popolo italiano subisce le conseguenze di una normativa
 
 <br><br>
 
-Il decreto in questione, all'art. 36 e 36-bis, attribuisce sanzioni punitive al proprietario di immobile pur le irregolarità essendo compiute da altri: committenti, costruttori, progettisti, direttori dei lavori. Con la mancata cura di funzionari ed Enti pubblici, i quali, pur diffuso il problema, non presero contromisure.
+Il decreto in questione, all'art. 36 e 36-bis, attribuisce sanzioni punitive al proprietario di immobile pur se le irregolarità sono state compiute da altri: committenti, costruttori, progettisti, direttori dei lavori. Con la mancata cura di funzionari ed Enti pubblici, i quali, pur diffuso il problema, non presero contromisure.
 
 <br><br>
 
@@ -71,7 +71,7 @@ Parlamento e Senato, Corti e Tribunali, Enti ed Istituzioni, Politici locali e n
 
 <br><br>
 
-Signor Presidente, ogni nuovo caso di errata attribuzione di pene pecuniarie per irregolarità edilizia, ogni ennesima sopraffazione del Cittadino, si lega in qualche modo alla firma del Presidente della Repubblica. Così permanendo le cose, si colpiscono i principi di responsabilità e ragionevolezza e viene lesa anche la più alta delle cariche: facendola garante formale di una iniquità materiale che nessuno ha mai fermato.
+Signor Presidente, ogni nuovo caso di errata attribuzione di pene pecuniarie per irregolarità edilizia, ogni ennesima sopraffazione del Cittadino, si lega in qualche modo alla firma del Presidente della Repubblica (puramente formale e priva di ogni responsabilità politica) e così permanendo le cose, si colpiscono i principi di responsabilità e ragionevolezza e appare lesa anche la più alta delle cariche: facendola garante procedurale di una iniquità materiale che nessuno ha mai fermato.
 
 <br><br>
 
@@ -79,7 +79,7 @@ Signor Presidente, la norma va corretta, come avrebbe dovuto esserlo dall'inizio
 
 <br><br>
 
-Un immobile può ereditare la necessità di vedersi controllato, ma non può ereditare una pena. La pena compete: o a chi, allora, non si curò di essere più corretto e preciso od a chi, oggi, con fare spavaldo pretende si debba punire (per giunta in maniera inversa) ciò che fu fatto vari decenni fa. Di tanto in tanto si offre una via d'uscita persino a chi davvero commise un abuso. Per quale ragione mai si pensa a liberare da ingiusti pesi chi è in regola, avendo preso per buoni i documenti rilasciati dai vari competenti?
+Un immobile può ereditare la necessità di vedersi controllato, ma non può ereditare una pena. La pena compete: o a chi, allora, non si curò di essere più corretto e preciso od a chi, oggi, con fare spavaldo pretende si debba punire (per giunta in maniera indiscriminata) ciò che fu fatto vari decenni fa. Di tanto in tanto si offre una via d'uscita persino a chi davvero commise un abuso. Per quale ragione mai si pensa a liberare da ingiusti pesi chi è in regola, avendo preso per buoni i documenti rilasciati dai vari competenti?
 
 <br><br>
 
@@ -109,13 +109,17 @@ email: dda@hyperlinker.org<br>PEC: danilo.dantonio@domicilio.online<br>
 
 <a class="noline" HREF="index.html">
 
-CAMPAGNA (INTER)NAZIONALE<br>per dissolvere l'iniqua ferocia del D.P.R. 380/2001
+CAMPAGNA (INTER)NAZIONALE<br>
+
+</div><div style="text-align: center; font-size: 36px;"><b><i>
+
+per dissolvere l'iniqua ferocia del D.P.R. 380/2001
 
 </a>
 
 </i></b></div>
 
-<br><br><br>
+<br>
 
 </div>
 
