--- a/lab/repita/camps/immo/pdr.html
+++ b/lab/repita/camps/immo/pdr.html
@@ -55,7 +55,7 @@ La prego, lasci ponga alla Sua attenzione un fatto di grave ingiustizia, che nas
 
 <br><br>
 
-Da oltre quarant'anni il Popolo italiano subisce le conseguenze di una normativa edilizia che, anziché esprimere i valori della Costituzione, li contraddice e, col D.P.R. 380 del 2001, reca la Sua sigla e La coinvolge. Trascinando nominalmente la figura del Presidente della Repubblica in un quadro di pari disvalore.
+Da oltre quarant’anni il Popolo italiano subisce le conseguenze di una normativa edilizia che, anziché esprimere i valori della Costituzione, li contraddice e, con il D.P.R. 380 del 2001, viene a portare la Sua sigla formale, trascinando nominalmente – suo malgrado – la figura del Presidente della Repubblica in un quadro di pari disvalore.
 
 <br><br>
 
