--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -78,7 +78,7 @@ Ad ogni Autorità, Eccellenza e Personalità nel Paese
 <div style="background-color: #F8F8F8; width: 80%; padding: 12px;">
 
 Lettera al Presidente della Repubblica<br>
-<b><a class="line" href="pdr.html" target="">D.P.R. 380/2001: l'iniquità lede l'immagine del Presidente della Repubblica</a></b>
+<b><a class="line" href="pdr.html" target="">D.P.R. 380/2001: l'iniquità appare ledere l'immagine del Presidente della Repubblica</a></b>
 
 </div>
 
