update completo di cortesia

--- a/lab/repita/camps/immo/pdr.html
+++ b/lab/repita/camps/immo/pdr.html
@@ -26,7 +26,7 @@
 
 <div style="text-align: left; font-size: 48px;"><b>
 
-D.P.R. 380/2001: l'iniquità appare ledere<br>l'immagine del Presidente della Repubblica
+L'iniquità del D.P.R. 380/2001 offusca anche<br>l’immagine del Presidente della Repubblica
 
 </b></div>
 
@@ -51,11 +51,11 @@ Le presento i miei migliori riguardi.
 
 <br><br>
 
-La prego, lasci ponga alla Sua attenzione un fatto di grave ingiustizia, che nasce decenni fa e che, dal 2001, si collega alla sacra figura del Presidente della Repubblica, procurandole un danno di pari gravità.
+La prego, lasci ponga alla Sua attenzione un fatto di grave ingiustizia, che nasce decenni fa e che, dal 2001, si collega alla sacra figura del Presidente della Repubblica, procurando, agli occhi dei cittadini, un danno d'immagine di pari gravità.
 
 <br><br>
 
-Da oltre quarant’anni il Popolo italiano subisce le conseguenze di una normativa edilizia che, anziché esprimere i valori della Costituzione, li contraddice e, con il D.P.R. 380 del 2001, viene a portare la Sua sigla formale, trascinando nominalmente – suo malgrado – la figura del Presidente della Repubblica in un quadro di pari disvalore.
+Da oltre quarant’anni il Popolo italiano subisce le conseguenze di una normativa edilizia che, anziché esprimere i valori della Costituzione, li contraddice e, con il D.P.R. 380 del 2001, viene a portare la sigla formale del Presidente della Repubblica trascinando questa figura – suo malgrado – in un quadro di pari disvalore.
 
 <br><br>
 
@@ -71,15 +71,15 @@ Parlamento e Senato, Corti e Tribunali, Enti ed Istituzioni, Politici locali e n
 
 <br><br>
 
-Signor Presidente, ogni nuovo caso di errata attribuzione di pene pecuniarie per irregolarità edilizia, ogni ennesima sopraffazione del Cittadino, si lega in qualche modo alla firma del Presidente della Repubblica (puramente formale e priva di ogni responsabilità politica) e così permanendo le cose, si colpiscono i principi di responsabilità e ragionevolezza e appare lesa anche la più alta delle cariche: facendola garante procedurale di una iniquità materiale che nessuno ha mai fermato.
+Signor Presidente, ogni nuovo caso di errata attribuzione di pene pecuniarie per irregolarità edilizia, ogni ennesima sopraffazione del Cittadino, si lega in qualche modo alla firma del Presidente della Repubblica (puramente formale e priva di ogni responsabilità politica) e così permanendo le cose, si colpiscono i principi di responsabilità e ragionevolezza e appare offuscata anche la più alta delle cariche: facendola garante procedurale di una iniquità materiale che nessuno ha mai fermato.
 
 <br><br>
 
-Signor Presidente, la norma va corretta, come avrebbe dovuto esserlo dall'inizio. Il proprietario in regola sia tenuto ai soli costi di aggiornamento documentale. Il danno erariale sia risarcito dai responsabili, subendo le relative sanzioni. Se gli Enti locali non si diranno sazi, se la prendano con loro stessi. Chi rilasciò quei documenti?
+Signor Presidente, la norma va corretta, come avrebbe dovuto esserlo dall'inizio. Il proprietario in regola sia tenuto ai soli costi di aggiornamento documentale. Il danno erariale sia risarcito dai responsabili, subendo essi le relative sanzioni. Se gli Enti locali non si diranno soddisfatti, se la prendano con loro stessi. Chi rilasciò quei documenti?
 
 <br><br>
 
-Un immobile può ereditare la necessità di vedersi controllato, ma non può ereditare una pena. La pena compete: o a chi, allora, non si curò di essere più corretto e preciso od a chi, oggi, con fare spavaldo pretende si debba punire (per giunta in maniera indiscriminata) ciò che fu fatto vari decenni fa. Di tanto in tanto si offre una via d'uscita persino a chi davvero commise un abuso. Per quale ragione mai si pensa a liberare da ingiusti pesi chi è in regola, avendo preso per buoni i documenti rilasciati dai vari competenti?
+Un immobile può ereditare la necessità di vedersi controllato, ma non può ereditare una pena. La pena compete: o a chi, allora, non si curò di essere più corretto e preciso od a chi, oggi, pretende si debba punire (per giunta in maniera indiscriminata) ciò che fu fatto vari decenni fa. Di tanto in tanto si offre una via d'uscita persino a chi davvero commise un abuso. Per quale ragione mai si pensa a liberare da ingiusti pesi chi è in regola, avendo preso per buoni i documenti rilasciati dai vari competenti?
 
 <br><br>
 
