--- a/lab/index.html
+++ b/lab/index.html
@@ -33,8 +33,7 @@
             'whole-earth.hyperlinker.org': 'https://hyperlinker.org/whole_earth/index.htm',
             'wholeness.hyperlinker.org': 'https://hyperlinker.org/wholeness/index.htm',
             'dpr-380.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
-            'rut.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/art_cul.html',
-            'al-presidente.hyperlinker.org': 'https://www.hyperlinker.org/repita/camps/immo/pre/1.pdf',
+            'al-presidente.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'alla-presidenza.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
         };
 
