--- a/lab/repita/camps/immo/pdr.html
+++ b/lab/repita/camps/immo/pdr.html
@@ -51,7 +51,7 @@ Le presento i miei migliori riguardi.
 
 <br><br>
 
-La prego, lasci ponga alla Sua attenzione un fatto di grave ingiustizia, che nasce decenni fa e che, dal 2001, si collega alla sacra figura del Presidente della Repubblica, procurando, agli occhi dei cittadini, un danno d'immagine di pari gravità.
+La prego di voler considerare un fatto di grave ingiustizia, che nasce decenni fa e che, dal 2001, si collega alla sacra figura del Presidente della Repubblica, procurando, agli occhi dei cittadini, un danno d'immagine di pari gravità.
 
 <br><br>
 
