--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -75,10 +75,10 @@ Ad ogni Autorità, Eccellenza e Personalità nel Paese
 
 <br><br>
 
-<div style="background-color: #F8F8F8; width: 90%; padding: 12px;">
+<div style="background-color: #F8F8F8; width: 100%; padding: 12px;">
 
 Lettera al Presidente della Repubblica<br>
-<b><a class="line" href="pdr.html" target="">L'iniquità del D.P.R. 380/2001 offusca l’immagine del Presidente della Repubblica</a></b>
+<b><a class="line" href="pdr.html" target="">L'iniquità del D.P.R. 380/2001 offusca anche l’immagine del Presidente della Repubblica</a></b>
 
 </div>
 
