--- a/lab/index.html
+++ b/lab/index.html
@@ -35,6 +35,7 @@
             'dpr-380.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
             'al-presidente.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
             'alla-presidenza.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/pdr.html',
+            'rut.hyperlinker.org': 'https://hyperlinker.org/corpus/rut_56.html',
         };
 
         if (redirectMap[hostname]) {
