--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -92,6 +92,14 @@ Prima lettera all'EuroParlamento
 
 </td></tr></table>
 
+<div style="font-size: 24px; padding: 12px; display: inline-block;">
+
+Questa ormai non è più solo una campagna socio/politica.<br>
+<b>D.P.R.380/2001: sta nascendo l'iniziativa culturale ed artistica.</b><br>
+Perché fatti del genere spiegano bene la permasta tirannide.
+
+</div>
+
 <!--
 
 <div style="font-size: 28px; padding: 12px; display: inline-block;">
@@ -103,7 +111,7 @@ Questa ormai non è più solo una campagna socio/politica<br>
 
 -->
 
-<br><br>
+<br><br><br>
 
 <i>
 <div style="font-size: 22px;">
