--- a/lab/repita/camps/immo/wrk/pdr.html
+++ b/lab/repita/camps/immo/wrk/pdr.html
@@ -55,7 +55,7 @@ La prego di voler considerare un fatto di grave ingiustizia, che nasce decenni f
 
 <br><br>
 
-Da oltre quarant’anni il Popolo italiano subisce le conseguenze di una normativa edilizia che, anziché esprimere i valori della Costituzione, li contraddice e, con il D.P.R. 380 del 2001, viene a portare – anche suo malgrado – la sigla formale del Presidente della Repubblica trascinando questa figura in un quadro di pari disvalore.
+Da oltre quarant’anni il Popolo italiano subisce le conseguenze di una normativa edilizia che, anziché esprimere i valori della Costituzione, li contraddice e, con il D.P.R. 380 del 2001, viene a portare la sigla formale del Presidente della Repubblica trascinando questa figura – suo malgrado – in un quadro di pari disvalore.
 
 <br><br>
 
@@ -71,7 +71,7 @@ Parlamento e Senato, Corti e Tribunali, Enti ed Istituzioni, Politici locali e n
 
 <br><br>
 
-Signor Presidente, ogni nuovo caso di errata attribuzione di pene pecuniarie per irregolarità edilizia, ogni ennesima sopraffazione del Cittadino, si lega in qualche modo alla firma del Presidente della Repubblica (anche se puramente formale e priva di ogni responsabilità politica) e così permanendo le cose, non solo si colpiscono i principi di responsabilità e ragionevolezza ma appare offuscata anche la più alta delle cariche: facendola garante procedurale di una iniquità materiale che nessuno ha mai fermato.
+Signor Presidente, ogni nuovo caso di errata attribuzione di pene pecuniarie per irregolarità edilizia, ogni ennesima sopraffazione del Cittadino, si lega in qualche modo alla firma del Presidente della Repubblica (puramente formale e priva di ogni responsabilità politica) e così permanendo le cose, si colpiscono i principi di responsabilità e ragionevolezza e appare offuscata anche la più alta delle cariche: facendola garante procedurale di una iniquità materiale che nessuno ha mai fermato.
 
 <br><br>
 
