--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -95,8 +95,8 @@ Prima lettera all'EuroParlamento
 <div style="font-size: 24px; padding: 12px; display: inline-block;">
 
 Questa ormai non è più solo una campagna socio/politica.<br>
-<b>D.P.R.380/2001: sta nascendo l'iniziativa culturale ed artistica.</b><br>
-Perché fatti del genere spiegano bene la permasta tirannide.
+<b><a class="none" href="../../index.htm">Il D.P.R.380/2001 si inserisce in una ampia iniziativa culturale.</a></b><br>
+Perché fatti del genere mostrano inequivocabilmente la permasta tirannide.
 
 </div>
 
