--- a/lab/repita/index.htm
+++ b/lab/repita/index.htm
@@ -32,8 +32,6 @@
 
 <font face="verdana" size="4"><b>
 
-<a class="noline" href="#dao" target="" title="Public Jobs Ban as a DAO and the role of UI">PJB-DAO</a>
-<br><br>
 <a class="noline" href="#storia" target="">STORIA</a>
 <br><br>
 <a class="noline" href="#costituzione" target="">COSTITUZIONE</a>
@@ -53,14 +51,21 @@
 <a class="noline" href="#lavoreddito" target="">LAVORO & REDDITO</a>
 <br><br>
 <a class="noline" href="#castamafia" target="">CASTA & MAFIA</a>
-<br><br>
+
+<br><br><br>
+
+<!--
+
 <a class="noline" href="#ambiente" target="">AMBIENTE</a>
+<img src="blank.gif" height="1pt" width="66pt">
+
+-->
+
+<a class="noline" href="#attivismo" target="">ATTIVISMO</a>
 <img src="blank.gif" height="1pt" width="66pt">
 <a class="noline" href="#unione-europea" target="">UNIONE EUROPEA</a>
 <img src="blank.gif" height="1pt" width="66pt">
 <a class="noline" href="#evoluzione" target="">EVOLUZIONE</a>
-<img src="blank.gif" height="1pt" width="66pt">
-<a class="noline" href="#attivismo" target="">ATTIVISMO</a>
 
 <br><br>
 
@@ -167,21 +172,33 @@
 <a name="democrazia"><img src="blank.gif"></a>
 
 <br><br><br><br><br>
-<br><br>
 
 <font face="verdana" color="#004000" size="4"><b>
 
 <a class="noline" href="democrazia-tirannide.htm" target="democrazia-tirannide">Democrazia / tirannide</a>
+
 <br><br>
-<a class="noline" href="democrazia-e-repubblica.htm" target="democrazia-e-repubblica">Democrazia e Repubblica</a> - <a class="noline" href="democracy-republic.htm" target="democracy-&-republic">Democracy and Republic</a> - <a class="noline" href="democratie-et-republique.htm" target="democratie-et-republique">Démocratie and République</a> - <a class="noline" href="democracia-y-republica.htm" target="democracia-y-republica">Démocracia y Républica</a>
+
+<a class="noline" href="democrazia-e-repubblica.htm" target="democrazia-e-repubblica">Democrazia e Repubblica</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="democracy-republic.htm" target="democracy-&-republic">Democracy and Republic</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="democratie-et-republique.htm" target="democratie-et-republique">Démocratie and République</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="democracia-y-republica.htm" target="democracia-y-republica">Démocracia y Républica</a>
+
 <br><br>
+
 <a class="noline" href="paese-davvero-democratico.htm" target="paese-davvero-democratico">A qualcuno interessa un Paese davvero democratico?</a>
-<br>
+<img src="blank.gif">/<img src="blank.gif">
 <a class="noline" href="really-democratic-country.htm" target="really-democratic-country">Anyone interested to a really democratic Country?</a>
 <br><br>
-<a class="noline" href="democrazia-planetaria.htm" target="democrazia-planetaria">Democrazia Planetaria</a> - 
-<a class="noline" href="planetary-democracy.htm" target="planetary-democracy">Planetary Democracy</a> - 
-<a class="noline" href="democratie-planetaire.htm" target="democratie-planetaire">Democratie Planetaire</a> - 
+<a class="noline" href="democrazia-planetaria.htm" target="democrazia-planetaria">Democrazia Planetaria</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="planetary-democracy.htm" target="planetary-democracy">Planetary Democracy</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="democratie-planetaire.htm" target="democratie-planetaire">Democratie Planetaire</a>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="democracia-planetaria.htm" target="democracia-planetaria">Democracia Planetaria</a>
 <br><br>
 <a class="noline" href="cambiamo-dna.htm" target="cambiamo-DNA">Cambiamo DNA alla società</a>
@@ -189,11 +206,13 @@
 <a class="noline" href="parola-abusata.htm" target="abusata">Democrazia: parola più abusata non c'è</a>
 <br><br>
 <a class="noline" href="transizione-democratica.htm" target="transizione">Urge Transizione Democratica!</a>
-<br>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="democratic-transition-still-lacks.htm" target="transition">Democratic Transition still lacks everywhere!</a>
-<br>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="transition-democratique-manque-partout.htm" target="partout">La transition démocratique manque encore partout!</a>
+
 <br><br>
+
 <a class="noline" href="reale-democrazia-vera-repubblica.htm" target="reale-e-vera">Per una reale Democrazia e Repubblica!</a>
 <br><br>
 <a class="noline" href="indicatore-unico-di-democrazia.htm" target="indicatore">L'indicatore unico di Democrazia</a>
@@ -204,15 +223,15 @@
 <br><br>
 <a class="noline" href="come-sfasciare-mondo.htm" target="come-sfasciare">Come sfasciare un mondo per non far mai quel che si deve</a>
 
-<br><br><br>
+<br><br>
 
 <a class="noline" href="la-gran-dote.htm" target="dote">La gran dote della cittadinanza</a>
 
+<br><br><br>
+
+<a class="noline" href="#elezioni" target="elezioni">Elezioni: il modo per mantener tutto come ai tempi del duce e del re</a>
+
 <br><br><br><br>
-
-<a class="noline" href="#elezioni" target="elezioni">Elezioni: il modo per mantener tutto<br>come ai tempi del duce e del re</a>
-
-<br><br><br><br><br>
 
 <a class="noline" href="#up" target="">§§§</a>
 
@@ -243,15 +262,21 @@
 <br><br><br>
 
 <a class="noline" href="quanti-difensori.htm" target="quanti-difensori">Quanti difensori ha la legalità?</a>
+
 <br><br>
+
 <a class="noline" href="due-volti-della-legalita.htm" target="due-volti">I due volti della legalità</a>
+
 <br><br>
+
 <a class="noline" href="seria-illegalita.htm" target="illegalita">Una seria questione d'illegalità</a>
-<br>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="greve-illegalite.htm" target="illégalité">Une greve question d'illégalité</a>
-<br>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="serious-illegality.htm" target="illegality">A serious matter of illegality</a>
+
 <br><br>
+
 <a class="noline" href="al-di-sopra-della-giustizia.htm" target="delinquenti">Al di sopra della Giustizia vi son solo delinquenti</a>
 <br><br>
 <a class="noline" href="legge-non-ammette-ignoranza.htm" target="ignoranza">La Legge non ammette ignoranza</a>
@@ -353,19 +378,31 @@
 <font face="verdana" color="#004000" size="4"><b>
 
 <a class="noline" href="come-si-evitano-guerre-civili.htm" target="guerre-civili">Come si evitano le guerre civili</a>
+
 <br><br>
-<a class="noline" href="geopolitica-era-moderna.htm" target="geopolitica">Geopolitica dell'Era Moderna</a> - <a class="noline" href="geopolitics-modern-era.htm" target="geopolitics">Geopolitics of Modern Era</a>
+
+<a class="noline" href="geopolitica-era-moderna.htm" target="geopolitica">Geopolitica dell'Era Moderna</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="geopolitics-modern-era.htm" target="geopolitics">Geopolitics of Modern Era</a>
+
 <br><br>
+
 <a class="noline" href="confini-aperti-e-plachi.htm" target="confini">Confini aperti e plachi, confini chiusi ed infiammati</a>
+
 <br><br>
+
 <a class="noline" href="origine-e-fine-militarismo.htm" target="militarismo">Origine e fine del militarismo</a>
-<br>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="origin-and-end-militarism.htm" target="militarism">Origin and end of militarism</a>
+
 <br><br>
+
 <a class="noline" href="tuffiamoci-per-cambiare.htm" target="tuffiamoci">Tuffiamoci nel profondo</a>
 <a class="noline" href="https://wrangler.substack.com/p/lets-dive-into-the-deep-to-change" target="militarismo">to change in surface</a>
 <br><br>
-<a class="noline" href="ennesima-guerra.htm" target="ennesima">Questa è l'ennesima guerra ...</a><br><a class="noline" href="another-war.htm" target="militarismo">This is yet another war ...</a>
+<a class="noline" href="ennesima-guerra.htm" target="ennesima">Questa è l'ennesima guerra ...</a>
+<img src="blank.gif"> / <img src="blank.gif">
+<a class="noline" href="another-war.htm" target="militarismo">This is yet another war ...</a>
 <br><br>
 <a class="noline" href="guerra-da-poteri-tiranni.htm" target="tiranni">Ogni guerra nasce da poteri tiranni</a>
 <br><br>
@@ -374,7 +411,6 @@
 <a class="noline" href="ottusita-ha-genitori.htm" target="ottusita">L'ottusità ha genitori precisamente individuati</a>
 
 <br><br><br><br><br>
-<br><br><br>
 
 <a class="noline" href="#up" target="">§§§</a>
 
@@ -397,7 +433,6 @@
 
 <br><br><br><br><br>
 <br><br><br><br><br>
-<br>
 
 <font face="verdana" color="#004000" size="4"><b>
 
@@ -415,10 +450,10 @@
 
 <a class="noline" href="meritocrazia-trasparenza.htm" target="meritocrazia-trasparenza">||| Meritocrazia ||| & ||| Trasparenza |||</a>
 
-<br><br>
+<br><br><br>
 
 <a class="noline" href="nuovo-manifesto-sinistra.htm" target="manifesto-sinistra">Un nuovo manifesto per la sinistra</a>
-<br>
+<img src="blank.gif"> / <img src="blank.gif">
 <a class="noline" href="nuovo-manifesto-comunismo.htm" target="manifesto-comunismo">Un nuovo manifesto per il comunismo</a>
 
 <br><br><br>
@@ -434,8 +469,6 @@
 <a class="noline" href="tutela-del-fanciullo.htm" target="tutela-del-fanciullo">A tutela dell'integrità psichica del Fanciullo</a>
 
 <br><br><br><br><br>
-<br><br><br><br><br>
-<br>
 
 <a class="noline" href="#up" target="">§§§</a>
 
@@ -494,6 +527,10 @@
 
 <font face="verdana" color="#004000" size="4"><b>
 
+<a class="noline" href="#dao" target="" title="PJB-DAO">The Public Jobs Bank as a DAO and the role of UI</a>
+
+<br><br><br>
+
 <a class="noline" href="banca-dei-pubblici-impieghi.htm" target="lavoreddito">Che cos'è la Banca dei Pubblici Impieghi?</a>
 <br><br>
 <a class="noline" href="continuita-del-reddito.htm" target="lavoreddito">La continuità del reddito</a>
@@ -511,8 +548,6 @@
 <a class="noline" href="professionismo-e-professionalita.htm" target="proffff">Professionismo e professionalità</a>
 
 <br><br><br><br><br>
-<br><br><br><br><br>
-<br><br><br>
 
 <a class="noline" href="#up" target="">§§§</a>
 
@@ -850,7 +885,7 @@
 <a name="castamafia"><img src="blank.gif"></a>
 
 <br><br><br><br><br>
-<br><br><br><br>
+<br><br><br><br><br>
 
 <font face="verdana" size="4"><b>
 
@@ -864,7 +899,6 @@
 <br><br>
 <a class="noline" href="logica-e-ragione.htm" target="logica-e-ragione">A fianco di logica e ragione</a>
 
-<br><br><br><br><br>
 <br><br><br><br><br>
 <br><br><br><br><br>
 
